tests/ui/formatter/fail/implicit_after_named.stderr
error: multiple unused formatting arguments
 --> tests/ui/formatter/fail/implicit_after_named.rs:7:17
  |
7 | #[derive(Debug, Error)]
  |                 ^^^^^
  |                 |
  |                 multiple missing formatting specifiers
  |                 argument never used
  |                 argument never used
  |
  = note: consider adding 2 format specifiers
  = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
